# coworker-portal

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DOMAIN.md  Dockerfile  README.md  build.rs  docker-compose.yml  local.md
conception/: unifi-openapi.yaml
examples/: gen_fixtures.rs
fixtures/: 00_schema.sql  01_users.sql  02_userprofiles.sql  03_services.sql  04_existingbills.sql
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  auth.ts  index.css
frontend/src/api/: auth.ts  bills.ts  client.ts  guest.ts  profile.ts  services.ts
frontend/src/components/: Navbar.tsx  ProtectedRoute.tsx  VoucherPdf.tsx
frontend/src/hooks/: useStatus.ts
frontend/src/lib/: theme.ts  toast.tsx
frontend/src/pages/: CreateBill.tsx  Dashboard.tsx  ForgotPassword.tsx  GuestBuy.tsx  GuestSummary.tsx  Landing.tsx  Login.tsx  Profile.tsx  ResetPassword.tsx
install/: install.sh
migrations/: 0001_voucher_spec.sql  0002_voucher.sql  0003_seed_services.sql  0004_guest_purchase.sql  0005_billline_voucher.sql  0007_voucher_daily_usage.sql  0008_password_reset_tokens.sql
public/: index.html
public/assets/: index-CVyCGKRC.css  index-JznOXr0i.js  index-db-2MfTg.js
scripts/: release.sh
src/: config.rs  domain.rs  error.rs  main.rs  openapi.rs
src/auth/: jwt.rs  mod.rs  password.rs  routes.rs
src/routes/: bills.rs  guest.rs  mod.rs  profile.rs  services.rs  status.rs  vouchers.rs
src/tasks/: mod.rs  monthly_usage.rs  voucher_sync.rs
src/unify/: mock.rs  mod.rs  real.rs
