[package]
name = "coworking-tooling"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tower-http = { version = "0.6", features = ["fs"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
pbkdf2 = { version = "0.12", features = ["hmac"] }
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
jsonwebtoken = "9"
dotenvy = "0.15"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }
async-trait = "0.1"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5", features = ["chrono"] }
utoipa-axum = "0.2"
axum-swagger-ui = "0.3.0"